--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <section class="hero">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Fuel Your Journey</h1>
-            <p>Discover personalized meal plans and <br />fitness routines tailored just for you.</p>
+            <h1>Celebrate the Season</h1>
+            <p>Shop at the best prices <br />Perfect for your family and festive needs.</p>
             <a href="#" class="btn-find-plan">Find Your Plan</a>
         </div>
     </section>
