--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class="hero">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Celebrate the Season</h1>
+            <h1>Enjoy the Season</h1>
             <p>Shop at the best prices <br />Perfect for your family and festive needs.</p>
             <a href="#" class="btn-find-plan">Find Your Plan</a>
         </div>
@@ -86,16 +86,16 @@
 
     <section class="calculator">
         <div class="container">
-            <h2>Calculate Your Calorie Needs</h2>
+            <h2>Plan Within Your Budget</h2>
             <form>
                 <div class="form-row">
-                    <input type="text" placeholder="Gender" name="gender">
-                    <input type="number" placeholder="Age" name="age">
-                    <input type="number" placeholder="Weight (kg)" name="weight">
+                    <input type="text" placeholder="Weight (kg)" name="weight">
+                    <input type="number" placeholder="Size" name="size">
+                    <input type="number" placeholder="Quantity" name="quantity">
                 </div>
                 <div class="form-row">
-                    <input type="number" placeholder="Height (cm)" name="height">
-                    <input type="text" placeholder="Activity Level" name="activity-level">
+                    <input type="number" placeholder="Prize (NGN)" name="prize">
+                    <input type="text" placeholder="User Level" name="user-level">
                     <button type="submit">Calculate</button>
                 </div>
             </form>
